--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/ (optional)
-url: "http://baka-san.github.io" # the base hostname & protocol for your site
+# url: "http://baka-san.github.io" # the base hostname & protocol for your site
+url: "http://grantbackes.com"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
